[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Enemies/IceCrusher_FSM.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Hazards/Enemies/ice_cursher.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemies/IceCrusher.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Hazards/Enemies/ice_cursher_spotted.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "going",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 11 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=13]
radius = 480.0

[node name="IceCrusher" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 4
script = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 16, 16 )
frames = SubResource( 5 )
playing = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 16, 16 )
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 16, 16 )
shape = SubResource( 3 )

[node name="Proximity" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Proximity"]
position = Vector2( 16, 16 )
shape = SubResource( 13 )

[node name="PlayerVisibility" type="RayCast2D" parent="."]
position = Vector2( 8, 24 )
enabled = true
collision_mask = 5

[node name="PlayerVisibility2" type="RayCast2D" parent="."]
position = Vector2( 24, 24 )
enabled = true
collision_mask = 5

[node name="PlayerVisibility3" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
enabled = true
collision_mask = 5

[node name="PlayerVisibility4" type="RayCast2D" parent="."]
position = Vector2( 24, 8 )
enabled = true
collision_mask = 5

[connection signal="body_entered" from="Proximity" to="." method="_on_Proximity_body_entered"]
[connection signal="body_exited" from="Proximity" to="." method="_on_Proximity_body_exited"]
